--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 
 
 This archive contains the distribution Dist-Zilla-Plugin-PodPurler, version
-0.091440:
+0.092930_001:
 
   like PodWeaver, but more erratic and amateurish
 
 This software is copyright (c) 2009 by Ricardo SIGNES.
 
 This is free software; you can redistribute it and/or modify it under
-the same terms as perl itself.
+the same terms as the Perl 5 programming language system itself.
 
